--- a/package.json
+++ b/package.json
@@ -1,7 +1,5 @@
 {
-  "dependencies": {
-    "ejs": "^3.1.9",
-    "express": "^4.19.2",
-    "express-session": "^1.18.0"
+  "scripts": {
+    "start": "node index.js"
   }
 }
